# .DirectX11

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/scripts/: config.yaml  main.py
.github/scripts/domains/issues/: manager.py
.github/scripts/domains/projects/: field_manager.py  sync.py
.github/scripts/domains/reporting/: daily.py
.github/workflows/: github-automation.yml
Docs/DirectX/: 01_DirectX11_Fundamentals.md  02_Graphics_Class_Analysis.md  03_Triangle_Rendering.md  04_Vertex_Coloring_Implementation.md
Docs/Tips/: Arrow_Operator.md  COM_Objects.md
shaders/: BasicPS.hlsl  BasicVS.hlsl
src/: Graphics.cpp  Graphics.h  Window.cpp  Window.h  main.cpp
src/core/: Graphics.cpp  Graphics.h  Window.cpp  Window.h
src/utils/: stdafx.h
